syntax = "proto3";

package user;

service UserService {
  rpc findUser (UserByEmail) returns (User) {}
  rpc create (User) returns (User) {}
}

message UserByEmail{
  string email = 1;
}

message User{
  int32 id = 1;
  string email = 2;
  string name = 3;
}
